models, first test

--- a/tests/FunBooksAndVideos.UnitTests/FunBooksAndVideos.UnitTests.csproj
+++ b/tests/FunBooksAndVideos.UnitTests/FunBooksAndVideos.UnitTests.csproj
@@ -5,7 +5,9 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\FunBooksAndVideos.Models\FunBooksAndVideos.Models.csproj" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
