membership type -> customer membership type

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ _pkginfo.txt
 # Visual Studio cache files
 # files ending in .cache can be ignored
 *.[Cc]ache
+/**/*.[Cc]ache*
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
 
@@ -267,3 +268,4 @@ __pycache__/
 .DS_Store
 
 __*log*.txt
+*.CoreCompileInputs.cache
