--- a/src/FunBooksAndVideos.WebAPI/FunBooksAndVideos.WebAPI.csproj
+++ b/src/FunBooksAndVideos.WebAPI/FunBooksAndVideos.WebAPI.csproj
@@ -15,5 +15,7 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\FunBooksAndVideos.Models\FunBooksAndVideos.Models.csproj" />
+  </ItemGroup>
 </Project>
