--- a/tests/FunBooksAndVideos.UnitTests/FunBooksAndVideos.UnitTests.csproj
+++ b/tests/FunBooksAndVideos.UnitTests/FunBooksAndVideos.UnitTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\FunBooksAndVideos.Models\FunBooksAndVideos.Models.csproj" />
+    <ProjectReference Include="..\..\src\FunBooksAndVideos.Services\FunBooksAndVideos.Services.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
